@@ -1,6 +1,8 @@
 devel
 -----
 
+* Show number of HTTP requests in cluster query profiles.
+
 * Improved the syntax highlighter for AQL queries in the web interface
   with support for multi-line strings, multi-line identifiers in forward
   and backticks, colorization of escape sequences, separate tokens for
